fixed top button hidden on mobile version

--- a/styles.css
+++ b/styles.css
@@ -159,14 +159,15 @@ body {
 }
 .info .infoText2 {
     visibility: hidden;
-    width: 180px;
+    width: 500%;
     background-color: black;
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 15px 0;
+    padding: 20% 0% 0% 0%;
     position: absolute;
     z-index: 1;
+    left: -220%;
 }
 .infoFile {
     visibility: hidden;
